syntax = "proto3";

package api.v1;

import "api/v1/definitions.proto";
import "api/v1/user.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "pkg/api";

service ParetoService {
  rpc Get(ParetoServiceGetRequest) returns (ParetoServiceGetResponse) {
    option (google.api.http) = {get: "/v1/pareto/{pareto_ids.id}"};
  }
  rpc Delete(ParetoServiceDeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/pareto/{pareto_ids.user_id}"};
  }
  rpc ListByUser(ParetoServiceListByUserRequest) returns (
      stream ParetoServiceListByUserResponse
  ) {
    option (google.api.http) = {get: "/v1/paretos/{user_ids.username}"};
  }
}

message ParetoServiceCreateRequest {
  Pareto pareto = 1;
}

message ParetoServiceGetRequest {
  ParetoIDs pareto_ids = 1;
}

message ParetoServiceGetResponse {
  Pareto pareto = 1;
}

message ParetoServiceUpdateRequest {
  Pareto pareto = 1;
}

message ParetoServiceDeleteRequest {
  ParetoIDs pareto_ids = 1;
}

message ParetoServiceListByUserRequest {
  UserIDs user_ids = 1;
}

message ParetoServiceListByUserResponse {
  Pareto pareto = 1;
}
